Bug 1883791: fix(webgpu): default to elem. size 1 instead of crashing on untyped array buf. views in `GPUQueue.writeBuffer` r=webgpu-reviewers,nical

Differential Revision: https://phabricator.services.mozilla.com/D203831